--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: "About"
-description: "Hey, this is BY."
+title: "我"
+description: "这里是本博客简介"
 header-img: "img/post-bg-rwd.jpg"
 ---
 
@@ -15,25 +15,19 @@ header-img: "img/post-bg-rwd.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>冰冻三尺 非一日之寒<br>
-    积土成山 非斯须之作</p></blockquote>
+    <blockquote><p><br>
+    日有所进，月有所长</p></blockquote>
 
-    <p>Hey，我是<strong>柏荧(BY)</strong>，一只iOS程序猿，现在厦门工作。</p>
+    <p>我是<strong>李航(Lih)</strong>，目前在北京。</p>
 
-    <p>工作、学习之余，我还是一个健身爱好者，同时也非常喜欢拳击。</p>
+    <p>出于学习的目的，建立此博客，希望能有所积累、有所长进。</p>
 
-    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页<a href="https://github.com/qiubaiying">👉GitHub·BY</a> 与 简书主页<a href="https://http://www.jianshu.com/u/e71990ada2fd">👉BY</a>。如果有什么问题，欢迎提出探讨~</p>
+    <!-- <p>工作、学习之余，我还是一个健身爱好者，同时也非常喜欢拳击。</p> -->
 
-    <p></p>
-    
-    <h5>Talks</h5>
+    <p>这是我参考<a href="https://github.com/qiubaiying">BY</a>的文章所建立的博客，非常感谢他的文章，节省了我非常多的时间。
 
-    <ul>
-        <li><a href="https://github.com">GitHub</a></li>
-        <li><a href="http://jekyll.com.cn/">jekyll</a></li>
-        <li><a href="http://huangxuan.me/">Hux</a></li> 
-        <li><a href="https://analytics.google.com/analytics">Google Analytics</a></li>
-    </ul>
+    <p>搭建本博客使用到了<a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a>，有兴趣的人可以查阅相关资料深入研究。</p>
+   
 </div>
 
 <!-- English Version -->
