--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@ header-img: "img/post-bg-rwd.jpg"
 
     <p>这是我参考<a href="https://github.com/qiubaiying">BY</a>的文章所建立的博客，非常感谢他的文章，节省了我非常多的时间。
 
-    <p>搭建本博客使用到了<a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a>，有兴趣的人可以查阅相关资料深入研究。</p>
+    <p>搭建本博客使用到了<a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a>，有兴趣的人可以查阅相关资料深入学习。</p>
    
 </div>
 
@@ -37,7 +37,7 @@ header-img: "img/post-bg-rwd.jpg"
 
     <p>Hi, I am <strong>Baiying Qiu</strong>，you can call me <strong>BY</strong>. I am an iOS software engineer and currently working in Xiamen</p>
 
-    <p>This is my personal blog, through making Github Pages and Jekyll.My GitHub  👉 <a href="http://github.com/qiubaiying">Github·BY</a>.</p>
+    <p>This is my personal blog, through making Github Pages and Jekyll.My GitHub   <a href="http://github.com/qiubaiying">Github·BY</a>.</p>
     
     <p>I am a sports enthusiast, I like fitness, running and boxing.</p>
 
