--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: "我"
-description: "这里是本博客简介"
+title: "about me"
+description: "日有所进，月有所长"
 header-img: "img/post-bg-rwd.jpg"
 ---
 
@@ -15,8 +15,6 @@ header-img: "img/post-bg-rwd.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p><br>
-    日有所进，月有所长</p></blockquote>
 
     <p>我是<strong>李航(Lih)</strong>，目前在北京。</p>
 
