--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@ header-img: "img/post-bg-rwd.jpg"
 
     <!-- <p>工作、学习之余，我还是一个健身爱好者，同时也非常喜欢拳击。</p> -->
 
-    <p>这是我参考<a href="https://github.com/qiubaiying">BY</a>的文章所建立的博客，非常感谢他的文章，节省了我非常多的时间。
+    <p>这是我参考<a href="https://github.com/qiubaiying">BY</a>的文章所建立的博客，非常感谢他的文章，节省了我很多的时间。
 
     <p>搭建本博客使用到了<a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a>，有兴趣的人可以查阅相关资料深入学习。</p>
    
